2009-03-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* TODO:

	Updated.
	
2009-03-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/CVSParser.py:
	* pycvsanaly2/Cache.py: Removed
	* pycvsanaly2/extensions/CommitsLOC.py:

	Rework the CommitsLOC extension. For svn and git repos, the lines
	added/removed per commit can be get from the log, so we can just
	parse again to extract such data. It's much faster and reliable.
	
2009-03-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Ignore what git clone command sends to stderr.
	
2009-03-24  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/file_types.py:

	Add more types
	
2009-03-24  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* setup.py:

	Add pkg-config support to setup.py script and use it to check
	whether the required repository handler version is installed.
	
2009-03-24  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Document the new -n, --no-parse command line option
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/cvsanaly2.1:
	* pycvsanaly2/Config.py:
	* pycvsanaly2/main.py:

	Add a command line option (-n, --no-parse) to be able to skip the
	parsing process when used in conjunction with --extensions.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Return from __insert_many when there's nothing to insert.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/FileTypes.py:

	Do not run executemany if we don't have any data to insert.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:
	* pycvsanaly2/extensions/FileTypes.py:
	* pycvsanaly2/extensions/CommitsLOC.py:
	* pycvsanaly2/extensions/Metrics.py:

	Use our own git clone command in Metrics to take advantage of the
	--reference flag since we already have the repository cloned. It
	makes the clone command really fast. It required some changes in